fixes bug where the date picker was falling off the screen on iphone 5

--- a/frontend/client/styles/screens/code_validations.scss
+++ b/frontend/client/styles/screens/code_validations.scss
@@ -105,7 +105,12 @@
 
       #date-picker {
         // width is the same as the button
-        width: 350px;
+        @include media('>phone') {
+          width: 350px;
+        }
+        @include media('<=phone') {
+          max-width: 100%;
+        }
         padding: 9px 20px 9px 20px;
       }
 
